# Taming-the-LLM

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 2ce9847ccbcbd0e9  4ea6160f12355530  626d5a7791edfef4  64736d24c1605e42  6f487bae023e956c  820a8995580388a6  8654deae67cf8163  93a1457abf955f79  adc83b19e793491b  c58d487269d09f12  e6ef65f10b9ff96d  f047a0af610c1394
.hypothesis/tmp/: tmp0xwxbs0d  tmpdgd9domi  tmpdnu4f055  tmpgmdxxljp  tmph7efpiu1  tmphf51ojpf  tmpjyes63oc  tmpp9pclryb  tmpqyn57pef  tmpwwoebgnk
fixtures/: evaluation_cases.json  mock_responses.json
pytest_semantic/: plugin.py
src/: agent.py  client.py  prompts.py
src/evaluation/: __init__.py  guardrails.py  properties.py  semantic.py
tests/: conftest.py  test_agent.py  test_coverage_imports.py  test_evaluation_init.py  test_guardrails.py  test_integration.py  test_plugin_hooks.py  test_properties.py  test_semantic.py
