[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "pytest_semantic*"]

[project]
name = "taming-the-llm"
version = "1.0.0"
description = "Unit testing framework for non-deterministic AI agents"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "respx>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "coverage>=7.5.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
]

[project.entry-points.pytest11]
semantic = "pytest_semantic.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "semantic: tests that perform semantic similarity evaluation",
    "property: property-based tests for LLM outputs",
    "integration: end-to-end tests requiring model loading",
    "slow: tests that take significant time to run",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src", "pytest_semantic"]
branch = true

[tool.coverage.report]
fail_under = 85
show_missing = true